Revert "fix: scrollbar disappearing"
This reverts commit 00fdbf3df976234d89efdf6b8a45daab04238b70.

--- a/frontend/src/style/components/_navbar.scss
+++ b/frontend/src/style/components/_navbar.scss
@@ -6,7 +6,7 @@ header {
   font-weight: bold;
   text-transform: uppercase;
   position: fixed;
-  z-index: 10001;
+  z-index: 1000;
   transition: 0.1s;
   &.scrolled {
     background-color: white;
